--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
