--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "sequelize-cli": "^6.6.1"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "joi": "^17.9.2",
     "pg": "^8.11.2",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1"
